# faf-agent-public

./: .gitignore  AGENT-FORMAT.md  CHANGELOG.md  CLAUDE.md  MEMORY.md  README.md  SECURITY.md  SPEC.md  Soul.md  fafipedia.fafi  project.faf  pyproject.toml  substrate.fafi
skill/: SKILL.md
