[project]
name = "faf-agent-mcp"
dynamic = ["version"]
authors = [
    { name = "wolfejam", email = "team@faf.one" }
]
description = "FAF Agent — the Voice of FAF (MCP server)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "faf", "mcp", "agent", "voice", "memory", "xai", "grok",
    "model-context-protocol", "fastmcp", "ai-agents"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=3.0.0",
    "faf-python-sdk>=1.1.0",
    "rapidfuzz>=3.0",
    "wasmtime>=20.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "xai-sdk>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/Wolfe-Jam/faf-agent"
Documentation = "https://faf.one/agent"
"Bug Tracker" = "https://github.com/Wolfe-Jam/faf-agent/issues"
"FAF Specification" = "https://faf.one"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/faf_agent_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/faf_agent_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "wjttc: WJTTC championship-grade test (aggregates Brake/Engine/Aero/Tyres)",
    "brake: WJTTC Brake tier — schema gates, refusals, hard-stop assertions",
    "engine: WJTTC Engine tier — correctness, contracts, deterministic paths",
    "aero: WJTTC Aero tier — polish, verbatim content, family marks",
    "tyres: WJTTC Tyres tier — live external probes (costs money + creds, may skip)",
]
